force-app/main/default/objects/Quality_Assessment__c/Quality_Assessment__c.object-meta.xml
<CustomObject>
    <label>Quality Assessment</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Quality Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>