force-app/main/default/objects/Quality_Assessment__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>