force-app/main/default/objects/Quality_Assessment__c/fields/Scored_Case__c.field-meta.xml
<CustomField>
    <fullName>Scored_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scored Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Quality Assessments</relationshipLabel>
    <relationshipName>Quality_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>