force-app/main/default/objects/Quality_Assessment__c/fields/Scored_Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Scored_Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scored Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Quality Assessments</relationshipLabel>
    <relationshipName>Quality_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>