force-app/main/default/objects/Quality_Assessment__c/fields/Scored_Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Scored_Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scored Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Quality Assessments</relationshipLabel>
    <relationshipName>Quality_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>